@@ -1,0 +1,7 @@
+<?xml version="1.0"?>
+<object name="portal_css">
+
+ <stylesheet remove="True"
+    id="++resource++collective.solr.resources/style.css"/>
+
+</object>
