@@ -1,0 +1,7 @@
+<?xml version="1.0"?>
+<object name="portal_skins">
+  <object name="solr_site_search" remove="True"/>
+  <skin-path name="*">
+    <layer name="solr_site_search" remove="True"/>
+  </skin-path>
+</object>
